--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
-    <title>Donate us | By Banna</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,200;0,500;0,600;0,700;0,800;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <title>Donatexx | By Banna</title>
   </head>
   <body>
-    <h1>Working fine? Let's check</h1>
+    <!-- banner area start -->
+    <section id="banner-area" class="banner-area">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="banner-content">
+              <h1>Let’s Help Those Who Are More In Need</h1>
+              <p>
+                Donatexx is a platform that allows you to donate to charity
+                organizations.
+              </p>
+              <a href="#" class="btn">Donate now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- banner area ends -->
   </body>
 </html>
