banner image added

--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
   </head>
   <body>
     <!-- banner area start -->
-    <section id="banner-area" class="banner-area">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="banner-content">
-              <h1>Let’s Help Those Who Are More In Need</h1>
-              <p>
-                Donatexx is a platform that allows you to donate to charity
-                organizations.
-              </p>
-              <a href="#" class="btn">Donate now</a>
-            </div>
+    <section>
+      <div id="banner-area" class="banner-area">
+        <div class="container">
+          <div class="banner-content">
+            <h1>Let’s Help Those Who Are More In Need</h1>
+            <p>
+              Donatexx is a platform that allows you to donate to charity
+              organizations.
+            </p>
+            <a href="#" class="btn">Donate now</a>
           </div>
         </div>
       </div>
