--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,200;0,500;0,600;0,700;0,800;0,900;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Arima:wght@100;200;300;400;500;600;700&family=Oswald:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
-    /> -->
+    />
     <title>Donatexx | By Banna</title>
   </head>
   <body>
     <!-- banner area start -->
     <section>
       <div id="banner-area" class="banner-area">
-        <div class="container">
-          <div class="row banner-content">
+        <div class="col justify-center items-center container">
+          <div class="col items-center text-center banner-content">
             <h1>Let’s Help Those Who Are More In Need</h1>
             <p>
               Donatexx is a platform that allows you to donate to charity
               organizations. We help them who are in need.
             </p>
-            <a href="#" class="btn">Donate now</a>
+            <a href="#" class="btn row items-center justify-center"
+              >Donate now</a
+            >
           </div>
         </div>
       </div>
