donation value added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <!-- banner area start -->
     <section>
-      <div id="banner-area" class="banner-area">
+      <div
+        id="banner-area"
+        class="banner-area main-width mx-auto realative overflow-hidden"
+      >
         <div class="col justify-center items-center container">
           <div class="col items-center text-center banner-content">
             <h1>Let’s Help Those Who Are More In Need</h1>
@@ -32,5 +35,49 @@
       </div>
     </section>
     <!-- banner area ends -->
+
+    <!-- donation value start -->
+    <section>
+      <div id="donation-value" class="donation-value main-width">
+        <div class="col justify-center items-center container">
+          <div class="donation-value-header col items-center text-center">
+            <h1>Donate Today</h1>
+            <p>
+              If you need help, reach out to these trusted resources instead of
+              a stranger on the internet. Think about dropping a note to camp
+              directors sharing strategies that work for you and for the
+              donation.
+            </p>
+          </div>
+          <div
+            class="donation-value-body row mx-auto justify-between items-center"
+          >
+            <div class="donation-value-card">
+              <p>100tk</p>
+            </div>
+            <div class="donation-value-card active">
+              <p>200tk</p>
+            </div>
+            <div class="donation-value-card">
+              <p>500tk</p>
+            </div>
+            <div class="donation-value-card">
+              <p>1000tk</p>
+            </div>
+            <div class="donation-value-card">
+              <p>5000tk</p>
+            </div>
+          </div>
+          <div class="donation-value-footer col items-center justify-between">
+            <input
+              type="text"
+              class="w-full"
+              placeholder="Other Amount (Taka)"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- donation value ends -->
   </body>
 </html>
