donatio value done

--- a/index.html
+++ b/index.html
@@ -68,12 +68,20 @@
               <p>5000tk</p>
             </div>
           </div>
-          <div class="donation-value-footer col items-center justify-between">
-            <input
-              type="text"
-              class="w-full"
-              placeholder="Other Amount (Taka)"
-            />
+          <div
+            class="donation-value-footer col items-center overflow-hidden justify-between"
+          >
+            <div
+              class="donation-value-input row items-center justify-center realative w-full"
+            >
+              <input
+                type="text"
+                class="w-full absolute h-full"
+                placeholder=""
+              />
+              <p>Other Amount (Taka)</p>
+            </div>
+            <a href="#" class="btn">Donate Now</a>
           </div>
         </div>
       </div>
