our donation section done

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
               Donatexx is a platform that allows you to donate to charity
               organizations. We help them who are in need.
             </p>
-            <a href="#" class="btn row items-center justify-center"
-              >Donate now</a
-            >
+            <a href="#" class="btn">Donate now</a>
           </div>
         </div>
       </div>
@@ -87,5 +85,72 @@
       </div>
     </section>
     <!-- donation value ends -->
+
+    <!-- our donation plan start -->
+    <section>
+      <div id="our-donation-plan" class="our-donation-plan main-width">
+        <div class="col justify-center items-center container">
+          <div class="our-donation-plan-header col items-center text-center">
+            <h1>Our Donate Plan</h1>
+            <p>
+              If you need help, reach out to these trusted resources instead of
+              a stranger on the internet. Think about dropping a note to camp
+              directors sharing strategies that work for you and for the
+              donation.
+            </p>
+          </div>
+          <div
+            class="our-donation-plan-body row mx-auto justify-between items-center"
+          >
+            <div class="our-donation-plan-card">
+              <div class="our-donation-plan-card-icon">
+                <img src="./assets/icons/food.png" alt="" />
+              </div>
+              <div class="our-donation-plan-card-title">
+                <p>Food for a family</p>
+              </div>
+              <div class="donation-plan-card-info">
+                <p>
+                  In the event of a disaster or emergency, this food gift could
+                  provide a family with a month's supply of essentials like
+                  vegetables, oil and sugar.
+                </p>
+              </div>
+            </div>
+            <div class="our-donation-plan-card">
+              <div class="our-donation-plan-card-icon">
+                <img src="./assets/icons/shelter.png" alt="" />
+              </div>
+              <div class="our-donation-plan-card-title">
+                <p>Shelter for a family</p>
+              </div>
+              <div class="donation-plan-card-info">
+                <p>
+                  Every donation we receive makes an impact on a family fleeing
+                  homelessness or abuse, helping them reclaim their independence
+                  and rebuild their lives.
+                </p>
+              </div>
+            </div>
+            <div class="our-donation-plan-card">
+              <div class="our-donation-plan-card-icon">
+                <img src="./assets/icons/Frame-1.png" alt="" />
+              </div>
+              <div class="our-donation-plan-card-title">
+                <p>Education for a child</p>
+              </div>
+              <div class="donation-plan-card-info">
+                <p>
+                  Education is the route out of poverty for many children, which
+                  is why we help millions of children go to school. Read more
+                  about our education charity work.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- our donation plan ends -->
   </body>
 </html>
