email section done

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <img src="./assets/icons/food.png" alt="" />
               </div>
               <div class="our-donation-plan-card-title">
-                <p>Food for a family</p>
+                <h3>Food for a family</h3>
               </div>
-              <div class="donation-plan-card-info">
+              <div class="our-donation-plan-card-info">
                 <p>
                   In the event of a disaster or emergency, this food gift could
                   provide a family with a month's supply of essentials like
@@ -122,9 +122,9 @@
                 <img src="./assets/icons/shelter.png" alt="" />
               </div>
               <div class="our-donation-plan-card-title">
-                <p>Shelter for a family</p>
+                <h3>Shelter for a family</h3>
               </div>
-              <div class="donation-plan-card-info">
+              <div class="our-donation-plan-card-info">
                 <p>
                   Every donation we receive makes an impact on a family fleeing
                   homelessness or abuse, helping them reclaim their independence
@@ -137,9 +137,9 @@
                 <img src="./assets/icons/Frame-1.png" alt="" />
               </div>
               <div class="our-donation-plan-card-title">
-                <p>Education for a child</p>
+                <h3>Education for a child</h3>
               </div>
-              <div class="donation-plan-card-info">
+              <div class="our-donation-plan-card-info">
                 <p>
                   Education is the route out of poverty for many children, which
                   is why we help millions of children go to school. Read more
@@ -152,5 +152,42 @@
       </div>
     </section>
     <!-- our donation plan ends -->
+
+    <!-- get updates start -->
+    <section>
+      <div id="get-updates" class="get-updates main-width">
+        <div class="col justify-center items-center container">
+          <div class="get-updates-header col items-center text-center">
+            <h1>Get Our Updates</h1>
+            <p>
+              Use this service to update your charity's details, such as the:
+              name of the charity; governing document; contact details, address
+              or bank account details.
+            </p>
+          </div>
+          <div
+            class="get-updates-body row mx-auto justify-between items-center"
+          >
+            <div class="get-updates-card flex items-center justify-center">
+              <di
+                class="get-updates-input-wrapper flex items-center justify-center"
+              >
+                <form
+                  class="w-full h-full flex realative items-center justify-center"
+                >
+                  <input
+                    type="email"
+                    placeholder="Email"
+                    class="absolute w-full overflow-hidden h-full"
+                  />
+                  <button class="btn absolute">Subscribe</button>
+                </form>
+              </di>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- get updates ends -->
   </body>
 </html>
