footer section done

--- a/index.html
+++ b/index.html
@@ -189,5 +189,20 @@
       </div>
     </section>
     <!-- get updates ends -->
+
+    <!-- footer starts -->
+    <footer>
+      <div class="footer-wrapper main-width">
+        <div class="col items-center justify-center container">
+          <a href="/">Donatexx</a>
+          <p>
+            A donation is a gift for charity, humanitarian aid, or to benefit a
+            cause. A donation may take various forms, including money, alms,
+            services, or goods.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- footer ends -->
   </body>
 </html>
