their live depends seciton done

--- a/index.html
+++ b/index.html
@@ -153,6 +153,40 @@
     </section>
     <!-- our donation plan ends -->
 
+    <!-- live depends on area start -->
+
+    <section>
+      <div id="live-depends" class="live-depends main-width overflow-hidden">
+        <div class="container">
+          <div class="flex col items-center justify-between">
+            <div class="live-depends-image realative overflow-hidden">
+              <img
+                src="./assets/images/donation9.jpg"
+                alt=""
+                class="absolute"
+              />
+            </div>
+            <div
+              class="live-depends-header text-center col items-center justify-center"
+            >
+              <h1>Their lives depends on our donation</h1>
+              <p>
+                Over the years, we have faced a multitude of issues but
+                undeterred, we have devised several solutions that help us
+                continue sharing the gift of abundance and prosperity with poor
+                people. Every person, no matter who they are or where they come
+                from, deserves a chance at a prosperous life. Save the person,
+                through several state-level programmes and national
+                policy-influencing decisions, has helped 22,255 people out from
+                the clutches of poverty in 2019!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- live depends on area ends -->
+
     <!-- get updates start -->
     <section>
       <div id="get-updates" class="get-updates main-width">
