importance of donation forgot to add, complete design

--- a/index.html
+++ b/index.html
@@ -153,6 +153,57 @@
     </section>
     <!-- our donation plan ends -->
 
+    <!-- importance of donation start-->
+    <section>
+      <div id="importace-donation" class="importace-donation">
+        <div class="container">
+          <div class="lives-details-wrapper">
+            <div class="lives-details">
+              <h1>Their lives depends on our donation</h1>
+              <p>
+                Over the years, we have faced a multitude of issues but
+                undeterred, we have devised several solutions that help us
+                continue sharing the gift of abundance and prosperity with poor
+                people. Every person, no matter who they are or where they come
+                from, deserves a chance at a prosperous life. Save the person,
+                through several state-level programmes and national
+                policy-influencing decisions, has helped 22,255 people out from
+                the clutches of poverty in 2019!
+              </p>
+              <button class="btn">How to Contribute?</button>
+            </div>
+
+            <div class="lives-details-img">
+              <img src="./assets/images/donation10.jpg" />
+            </div>
+          </div>
+
+          <div class="lives-details-wrapper sec-one">
+            <div class="lives-details-img">
+              <img src="./assets/images/donation11.jpg"" />
+            </div>
+
+            <div class="lives-details sec-one-details">
+              <h1>They need us to survive their lives</h1>
+              <p>
+                We believes that there are five essential asset areas—basic
+                necessities; good health, education and training, food security,
+                community involvement and sport—that are vital for individual
+                and family success on the path out of poverty. We also believe
+                that the people closest to challenges of poverty and illiteracy
+                are best positioned to address these issues. Change a poor
+                person lives by donation to our foundation. Give hope to the
+                person by donating to our foundation.
+              </p>
+              <button class="btn">How to Contribute?</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- importance of donation ends-->
+
     <!-- live depends on area start -->
 
     <section>
